[gd_scene load_steps=18 format=3 uid="uid://dl36kawnud74k"]

[ext_resource type="Script" uid="uid://bqjvqm6jwvr1e" path="res://scripts/unit_card/unit_card.gd" id="1_2ee4v"]
[ext_resource type="FontFile" uid="uid://8di0jvr25vat" path="res://assets/font/m5x7.ttf" id="1_cdcni"]
[ext_resource type="Resource" uid="uid://83gxhusc82ev" path="res://data/player/player_stats.tres" id="2_2yriv"]
[ext_resource type="Texture2D" uid="uid://c4awhqfup7o2k" path="res://assets/sprites/gold.png" id="2_lw7or"]
[ext_resource type="Script" uid="uid://y8ca3hu1873u" path="res://data/units/unit_stats.gd" id="3_00nd2"]
[ext_resource type="Texture2D" uid="uid://cx1ivjobggp8n" path="res://assets/sprites/rogues.png" id="3_jsq82"]
[ext_resource type="Script" uid="uid://cg6tbxkoolqwp" path="res://data/traits/trait.gd" id="4_yqr5c"]
[ext_resource type="Resource" uid="uid://frvq8s8h77ib" path="res://data/traits/human.tres" id="5_1jfxx"]
[ext_resource type="Resource" uid="uid://b7cltonugr25t" path="res://data/traits/fighter.tres" id="6_rnsru"]
[ext_resource type="Resource" uid="uid://05wl6hatg0gh" path="res://data/traits/noble.tres" id="7_my3i0"]
[ext_resource type="AudioStream" uid="uid://05sgyew2ynsi" path="res://assets/sfx/buy.ogg" id="8_yqr5c"]

[sub_resource type="Resource" id="Resource_6rxv1"]
script = ExtResource("3_00nd2")
name = "Arthur"
rarity = 2
gold_cost = 4
tier = 1
traits = Array[ExtResource("4_yqr5c")]([ExtResource("5_1jfxx"), ExtResource("6_rnsru"), ExtResource("7_my3i0")])
pool_count = 5
skin_coordinates = Vector2i(4, 2)

[sub_resource type="LabelSettings" id="LabelSettings_tnwt5"]
line_spacing = 0.0
font = ExtResource("1_cdcni")
font_color = Color(0.6, 0.862745, 1, 0.729412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qv24o"]
resource_local_to_scene = true
bg_color = Color(0.0705882, 0.290196, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2cd18"]
resource_local_to_scene = true
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0705882, 0.290196, 0.180392, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd1e3"]
resource_local_to_scene = true
atlas = ExtResource("3_jsq82")
region = Rect2(32, 96, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ombhj"]
bg_color = Color(0, 0, 0, 1)

[node name="UnitCard" type="Button"]
custom_minimum_size = Vector2(80, 52)
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
script = ExtResource("1_2ee4v")
player_stats = ExtResource("2_2yriv")
unit_stats = SubResource("Resource_6rxv1")
buy_card_sound = ExtResource("8_yqr5c")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.0823529, 0.12549, 1)

[node name="TraitsLabel" type="Label" parent="BG"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 45.0
offset_bottom = 29.0
text = "viking
fighter
noble"
label_settings = SubResource("LabelSettings_tnwt5")

[node name="BottomPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 18)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qv24o")

[node name="MarginContainer" type="MarginContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 5

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="UnitNameLabel" type="Label" parent="BottomPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Arthur"

[node name="GoldHBox" type="HBoxContainer" parent="BottomPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
alignment = 1

[node name="GoldIcon" type="TextureRect" parent="BottomPanel/MarginContainer/HBoxContainer/GoldHBox"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_lw7or")
stretch_mode = 5

[node name="GoldCostLabel" type="Label" parent="BottomPanel/MarginContainer/HBoxContainer/GoldHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="BorderPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2cd18")

[node name="UnitIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 2.0
offset_right = 34.0
offset_bottom = 32.0
grow_horizontal = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_fd1e3")
expand_mode = 1
stretch_mode = 5

[node name="EmptyPlaceholder" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ombhj")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
